get new quest and done /As a player I want to be able to se quests journal/

--- a/static/sierra/main.css
+++ b/static/sierra/main.css
@@ -36,3 +36,9 @@
   background-size: 100%;
   background-color: #18232f;
 }
+.enigma-key {
+  background-image: url('http://srorieltomsk.ru/upload/medialibrary/a54/8503418_5f8e8269.gif');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #18232f;
+}
